# Dataset-Cleaner-Latency-Tick-Store

./: .gitignore  COMPILATION_STATUS.md  COMPILER_INSTALLATION.md  Dockerfile  FINAL_INTEGRATION_STATUS.md  FINAL_PERFORMANCE_DEMO.py  FINAL_RESULTS.md  FINAL_SUMMARY.md  GITHUB_PUSH_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS_FINAL.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_SUCCESS.md  PROJECT_SUMMARY.md  README.md  SETUP_COMPLETE.md  TESTING_SUMMARY.md  TESTING_VALIDATION_SUMMARY.md  additional_tests_needed.md  benchmark_windows.py  build.py  build_rust_simple.py  build_windows.py  build_windows_simple.py  comprehensive_test_suite.py  debug_test.py  demo_final.py  docker-compose.yml  final_demo.py  install_compilers.bat  install_compilers.ps1  integration_test_final.py  mobiles.csv  performance_comparison_real.py  pyproject.toml  quick_test.py  setup.py  setup_environment.ps1  simple_test.py  test_integration.py  (+6 more)
examples/: basic_usage.py  sample_ticks.csv
monitoring/: prometheus.yml
schemas/: alt_nvd_v1.json  ticks_v1.json
src/cpp/: CMakeLists.txt
src/cpp/include/: simd_parser.hpp
src/cpp/src/: simd_parser.cpp
src/rust/: Cargo.toml  setup.py
src/rust/src/: error.rs  lib.rs  metrics.rs  simd_parser.rs  stream_processor.rs
src/tickdb/: __init__.py  cli.py  config.py  core.py  loader.py  metrics.py  reader.py  schemas.py  validation.py
tests/: __init__.py  test_core.py
