[package]
name = "dataset_core_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { version = "55.0", default-features = false }
tokio = { version = "1.0", features = ["full"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
rayon = "1.8"
dashmap = "5.5"
prometheus = { version = "0.13", features = ["process"] }
tracing = "0.1"
tracing-subscriber = "0.3"
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"

[lib]
name = "dataset_core_rust"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[features]
default = ["simd"]
simd = []
avx2 = []
avx512 = [] 